...
import app.igormatos.botaprarodar.presentation.login.signin.LoginActivity
import com.google.firebase.auth.FirebaseAuth

@Composable
fun TopBar() {
    TopAppBar(
        title = { Text("Bota Pra Rodar") },
        actions = { LogoutButton() },
        backgroundColor = Color.White,
        modifier = Modifier.border(
            border = BorderStroke(0.dp, Color.Transparent),
            shape = RoundedCornerShape(bottomStart = 4.dp, bottomEnd = 4.dp)
        )
...
}

@Composable
private fun LogoutButton() {
    val context = LocalContext.current
    IconButton(onClick = { logout(context = context) }) {
        Icon(imageVector = Icons.Filled.Logout, contentDescription = "Logout")
    }
}

fun logout(context: Context) {
    FirebaseAuth.getInstance().signOut()

...
